# tt

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.codex/: AGENTS.md  README.md
.codex/agents/: dev.toml  direct.toml  director.toml  integration.toml  test.toml  todo.toml
.codex/docs/: roles.md
.codex/orcas/role-instructions/: direct.md  supervisor.md  todo.md
.codex/skills/agent/: SKILL.md
.codex/skills/chat/: SKILL.md
.codex/skills/clean/: SKILL.md
.codex/skills/codex/: SKILL.md
.github/workflows/: ci.yml
.tt/: AGENTS.md  README.md  config.toml  contract.md  project.toml  settings.env  state.toml
.tt/agents/: direct.toml  feature.toml  harness.toml  integration.toml
.tt/contracts/: worker-contract.md
.tt/docs/: roles.md
crates/orcas/: Cargo.toml
crates/orcas-codex/: Cargo.toml
crates/orcas-codex/contracts/: codex-contract-index.json
crates/orcas-codex/src/: approval.rs  client.rs  daemon.rs  lib.rs
crates/orcas-codex/src/contract/: cli.rs  mod.rs  schema.rs
crates/orcas-codex/src/protocol/: types.rs
crates/orcas-core/: Cargo.toml
crates/orcas-core/src/: authority.rs  collaboration.rs  communication.rs  config.rs  events.rs  ipc.rs  lib.rs  logging.rs  paths.rs  session.rs  store.rs  supervisor.rs
crates/orcas-daemon/: Cargo.toml
crates/orcas-daemon/src/: authority_store.rs  client.rs  lib.rs  main.rs  process.rs  service.rs
crates/orcas-daemon/src/assignment_comm/: mod.rs  parse.rs  policy.rs  render.rs
crates/orcas-daemon/tests/: lifecycle.rs
crates/orcas-operator-core/: Cargo.toml
crates/orcas-operator-web/: Cargo.toml  README.md  index.html  style.css
crates/orcas-operator-web/src/: api.rs  lib.rs  main.rs  push.rs  pwa.rs  storage.rs  workspace.rs  workstreams.rs
crates/orcas-operator-web/static/: manifest.webmanifest  sw.js
crates/orcas-server/: Cargo.toml
crates/orcas-server-client/: Cargo.toml
crates/orcas-server-client/src/: lib.rs
crates/orcas-server/src/: delivery.rs  http.rs  main.rs  store.rs
crates/orcas-supervisor/: Cargo.toml
crates/orcas-supervisor/src/: main.rs  service.rs  streaming.rs
crates/orcas-tui/: Cargo.toml
crates/orcas-tui/src/: app.rs  backend.rs  lib.rs  main.rs  render.rs  runtime.rs  test_harness.rs  tests.rs  view_model.rs
crates/orcas-tui/src/codex/: mod.rs  preview.rs  ring_buffer.rs  session.rs  terminal.rs
crates/orcas-tui/src/render/: collaboration.rs  main.rs  mod.rs  overview.rs  review.rs  shared.rs  shell.rs  supervisor.rs  threads.rs
crates/orcas-tui/src/view_model/: collaboration.rs  main.rs  mod.rs  overview.rs  review.rs  shared.rs  threads.rs
crates/orcas/src/: main.rs  remote.rs  service.rs  skill_runtime.rs  streaming.rs  tui.rs
crates/orcas/tests/: cli_socket.rs
crates/orcasd/: Cargo.toml
crates/tt/: Cargo.toml
crates/tt-cli/: Cargo.toml
crates/tt-cli/src/: lib.rs  main.rs
crates/tt-codex/: Cargo.toml
crates/tt-codex/src/: lib.rs
crates/tt-core/: Cargo.toml
crates/tt-core/src/: authority.rs  collaboration.rs  communication.rs  config.rs  error.rs  events.rs  ipc.rs  jsonrpc.rs  lane.rs  lib.rs  logging.rs  paths.rs  planning.rs  session.rs  snapshot.rs  store.rs  supervisor.rs
crates/tt-daemon/: Cargo.toml
crates/tt-daemon/src/: lib.rs
crates/tt-operator-core/: Cargo.toml
crates/tt-operator-web/: Cargo.toml  README.md  index.html  style.css
crates/tt-runtime/: Cargo.toml
crates/tt-server/: Cargo.toml
crates/tt-server-client/: Cargo.toml
crates/tt-server-client/src/: lib.rs
crates/tt-skills/: Cargo.toml
crates/tt-store/: Cargo.toml
crates/tt-store/migrations/: 0002_workspace_lifecycle_events.sql
crates/tt-store/src/: lib.rs
crates/tt-tui/: Cargo.toml
crates/tt-tui/src/: lib.rs  main.rs
crates/tt/src/: docs.rs  main.rs  remote.rs  service.rs  skill_runtime.rs  snapshot.rs  streaming.rs  tui.rs
crates/tt/tests/: cli_socket.rs
crates/ttd/: Cargo.toml
crates/ttd/src/: authority_store.rs  client.rs  inbox_mirror.rs  landing_authorization.rs  landing_execution.rs  lib.rs  main.rs  merge_prep.rs  operator_inbox.rs  planning_session.rs  process.rs  remote_action.rs  service.rs  supervisor.rs  workspace_inspection.rs
crates/ttd/src/assignment_comm/: mod.rs  parse.rs  policy.rs  render.rs
crates/ttd/tests/: authority_assignment_socket.rs  authority_bridge_socket.rs  authority_socket.rs  daemon_cli.rs  fake_runtime.rs  fake_supervisor.rs  harness.rs  lifecycle.rs  real_socket.rs
docs/: CLI_REFERENCE.md  NEXT_MILESTONES.md  PHASE2_EXECUTION_PLAN.md  WORKSTREAM_TODO.md  architecture.md  cli-reference.md  codex-app-server-notes.md  codex-thread-supervision-v1.md  collaboration.md  configuration.md  install.md  ipc-protocol.md  logging.md  managed-projects.md  operations.md  orcas-daemon.md  orcas-realign-todo.md  testing.md  tt_codex_runtime_contract.md  tt_v2_architecture.md  validate-workflows-todo.md  workspace-lifecycle.md
docs/adr/: 0001-tracked-thread-is-a-local-binding-record.md
docs/design/: local-authority-mvp-backend.md  orcas-control-plane-alignment.md
docs/orcas-collaboration-v1/: assignment-communication-protocol-v1.md  assignment-communication-visibility.md  lifecycles.md  next-implementation-cut.md  object-model.md  overview.md  reporting-and-decisions.md  runtime-mapping.md  v1-scope.md
packaging/man/: orcas-tui.1  orcas.1  orcasd.1  tt-daemon.1  tt.1  ttd.1
packaging/systemd/: orcas-daemon.service  tt-daemon.service
roles/chat/: role.md
roles/ci/: role.md
roles/develop/: role.md
roles/diff/: role.md
roles/direct/: role.md
roles/docs/: role.md
roles/explore/: role.md
roles/feature/: role.md
roles/general/: role.md
roles/git/: role.md
roles/handoff/: role.md
roles/harness/: role.md
roles/integrate/: role.md
roles/integration/: role.md
roles/learn/: role.md
roles/merge/: role.md
roles/plan/: role.md
roles/supervisor/: role.md
roles/test/: role.md
roles/testing/: role.md
roles/todo/: role.md
roles/todo-note/: role.md
roles/todo-plan/: role.md
roles/todo-review/: role.md
tests/e2e/: README.md  run_all.sh  run_scenario.sh
(+141 files in other folders)
