[workspace]
members = [
    "crates/tt-core",
    "crates/tt-runtime",
    "crates/ttd",
    "crates/tt-server-client",
    "crates/tt-operator-core",
    "crates/tt-operator-web",
    "crates/tt-skills",
    "crates/tt",
    "crates/tt-server",
]
default-members = [
    "crates/tt-core",
    "crates/tt-runtime",
    "crates/ttd",
    "crates/tt-server-client",
    "crates/tt-operator-core",
    "crates/tt-skills",
    "crates/tt",
    "crates/tt-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
dirs = "6.0.0"
futures = { version = "0.3.31", default-features = false, features = ["alloc", "std"] }
parking_lot = "0.12.4"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "test-util", "time"] }
tokio-tungstenite = "0.27.0"
toml = "0.9.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }
gloo-net = "0.6.0"
leptos = { version = "0.8.12", default-features = false, features = ["csr"] }
leptos_router = "0.8.12"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
