[package]
name = "orcas-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
orcas-core = { path = "../orcas-core" }
syn = { version = "2.0.108", features = ["full", "parsing", "extra-traits"] }
thiserror.workspace = true
quote = "1.0.40"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
url.workspace = true

[lints]
workspace = true
