[package]
name = "orcas-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "orcasd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
orcas-codex = { path = "../orcas-codex" }
orcas-core = { path = "../orcas-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
