[package]
name = "orcas-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
orcas-core = { path = "../orcas-core" }
serde.workspace = true
tracing.workspace = true
uuid.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net.workspace = true

[dev-dependencies]
chrono.workspace = true
serde_json.workspace = true
tokio.workspace = true
tempfile = "3.23.0"
orcas-server = { path = "../orcas-server" }

[lints]
workspace = true
