[package]
name = "orcas-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "orcas-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = "0.8.6"
chrono.workspace = true
clap.workspace = true
isahc = "1.7.2"
orcas-core = { path = "../orcas-core" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tower-http = { version = "0.6.2", features = ["cors"] }
uuid.workspace = true
web-push = "0.11.0"

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
