[package]
name = "orcas-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "orcas"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
orcas-daemon = { path = "../orcas-daemon" }
orcas-core = { path = "../orcas-core" }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono.workspace = true

[lints]
workspace = true
