[package]
name = "orcas-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "orcas-tui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
orcas-daemon = { path = "../orcas-daemon" }
orcas-core = { path = "../orcas-core" }
ratatui.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
