[package]
name = "orcas"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "orcas"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
orcasd = { path = "../orcasd" }
orcas-core = { path = "../orcas-core" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
axum = "0.8.6"
chrono.workspace = true
futures.workspace = true
orcas-codex = { path = "../orcas-codex" }
serde.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
uuid.workspace = true

[lints]
workspace = true
