[package]
name = "orcas"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "orcas"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
serde.workspace = true
orcas-server-client = { path = "../orcas-server-client" }
orcasd = { path = "../orcasd" }
orcas-core = { path = "../orcas-core" }
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
axum = "0.8.6"
chrono.workspace = true
futures.workspace = true
orcas-codex = { path = "../orcas-codex" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
uuid.workspace = true

[lints]
workspace = true
