[package]
name = "orcas"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
crossterm = "0.28.1"
portable-pty = "0.9.0"
serde.workspace = true
orcas-server-client = { path = "../orcas-server-client" }
orcasd = { path = "../orcasd" }
orcas-core = { path = "../orcas-core" }
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
ratatui = "0.29.0"
toml_edit = "0.23.9"
vt100 = "0.15.0"

[dev-dependencies]
axum = "0.8.6"
chrono.workspace = true
futures.workspace = true
orcas-codex = { path = "../orcas-codex" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
uuid.workspace = true

[lints]
workspace = true
