[package]
name = "tt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "tt_cli"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tt-domain = { path = "../tt-domain" }
tt-daemon = { path = "../tt-daemon" }

[dev-dependencies]
chrono.workspace = true
tt-ui-core = { path = "../tt-ui-core" }

[lints]
workspace = true
