[package]
name = "tt-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "tt_codex"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tt-core = { path = "../tt-core" }
tt-runtime = { path = "../tt-runtime" }
tt-domain = { path = "../tt-domain" }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
