[package]
name = "tt-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "tt_tui"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tt-domain = { path = "../tt-domain" }
tt-daemon = { path = "../tt-daemon" }
tt-ui-core = { path = "../tt-ui-core" }

[dev-dependencies]
chrono.workspace = true
tempfile = "3.23.0"

[lints]
workspace = true
