[package]
name = "tt"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
chrono.workspace = true
crossterm = "0.28.1"
portable-pty = "0.9.0"
serde.workspace = true
tt-server-client = { path = "../tt-server-client" }
ttd = { path = "../ttd" }
tt-core = { path = "../tt-core" }
tt-skills = { path = "../tt-skills" }
serde_json.workspace = true
rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
ratatui = "0.29.0"
sha2 = "0.10.8"
toml_edit = "0.23.9"
vt100 = "0.15.0"

[dev-dependencies]
axum = "0.8.6"
futures.workspace = true
tt-runtime = { path = "../tt-runtime" }
serde.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
uuid.workspace = true

[lints]
workspace = true
