[package]
name = "ttd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "ttd"
path = "src/main.rs"

[[bin]]
name = "tt-state-seed"
path = "src/bin/tt-state-seed.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
tt-runtime = { path = "../tt-runtime" }
tt-core = { path = "../tt-core" }
reqwest.workspace = true
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
axum = "0.8.6"
futures.workspace = true
tt-server = { path = "../tt-server" }
tempfile = "3.23.0"
tokio-tungstenite.workspace = true

[lints]
workspace = true
